// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfirmPasswordModal /> should render an hidden modal 1`] = `
<Modal
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  bsSize="small"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "modals": Array [],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={false}
>
  <ModalHeader
    aria-label="Close"
    bsClass="modal"
    closeButton={true}
  >
    <ModalTitle
      bsClass="modal"
      id="contained-modal-title-lg"
    >
      Confirmez votre mot de passe pour continuer
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal"
  >
    Par mesure de sécurité, ressaisissez votre mot de passe.
    <ReduxForm />
  </ModalBody>
  <ModalFooter
    bsClass="modal"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={false}
      id="confirm-password-form-submit"
      navDropdown={false}
      navItem={false}
      onClick={[Function]}
      type="submit"
    >
      Confirmer
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<ConfirmPasswordModal /> should render an visible modal 1`] = `
<Modal
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  bsSize="small"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "modals": Array [],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    aria-label="Close"
    bsClass="modal"
    closeButton={true}
  >
    <ModalTitle
      bsClass="modal"
      id="contained-modal-title-lg"
    >
      Confirmez votre mot de passe pour continuer
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal"
  >
    Par mesure de sécurité, ressaisissez votre mot de passe.
    <ReduxForm />
  </ModalBody>
  <ModalFooter
    bsClass="modal"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={false}
      id="confirm-password-form-submit"
      navDropdown={false}
      navItem={false}
      onClick={[Function]}
      type="submit"
    >
      Confirmer
    </Button>
  </ModalFooter>
</Modal>
`;
